--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           class="items-center gap-10 grid md:grid-cols-2 mx-auto max-w-5xl max-md:max-w-md"
         >
           <div class="text-center md:text-left">
-            <div class="flex items-center gap-2 mb-10">
+            <div class="flex justify-center md:justify-start items-center gap-2 mb-10">
               <image
                 src="./images/gda-logo-removebg-preview-croped.png"
                 alt="logo"
@@ -39,20 +39,24 @@
               Transform your ideas into compelling narratives with our premium
               ghostwriting service.
             </p>
-            <button
-              type="button"
-              class="mr-3 border border-custom-blue hover:bg-blue-800 mt-8 px-5 py-2.5 rounded text-sm text-white tracking-wider outline-none"
-              style="background-color: #02073f"
-            >
-              Why choose us
-            </button>
-            <button
-              type="button"
-              class="border border-[#fe1212] mt-8 px-5 py-2.5 rounded text-sm text-white tracking-wider outline-none"
-              style="background-color: #fe1212"
-            >
-              Our process
-            </button>
+            <a href="#why-us">
+              <button
+                type="button"
+                class="mr-3 border border-custom-blue hover:bg-blue-800 mt-8 px-5 py-2.5 rounded text-sm text-white tracking-wider outline-none"
+                style="background-color: #02073f"
+              >
+                Why choose us
+              </button>
+            </a>
+            <a href="#our-process">
+              <button
+                type="button"
+                class="border border-[#fe1212] mt-8 px-5 py-2.5 rounded text-sm text-white tracking-wider outline-none"
+                style="background-color: #fe1212"
+              >
+                Our process
+              </button>
+            </a>
             <!--  -->
           </div>
           <div class="md:h-[400px]">
@@ -171,8 +175,12 @@
       </h2>
       <!-- 💥💥💥💥💥💥💥💥💥💥💥💥💥💥💥💥💥💥 -->
       <section class="flex flex-col md:flex-row gap-4 items-center">
-        <div class="w-full md:w-1/2 px-4 py-8 rounded-lg flex flex-col items-center justify-center text-center md:text-left">
-          <ul class="list-none space-y-4 text-gray-500 dark:text-gray-400 text-lg">
+        <div
+          class="w-full md:w-1/2 px-4 py-8 rounded-lg flex flex-col items-center justify-center text-center md:text-left"
+        >
+          <ul
+            class="list-none space-y-4 text-gray-500 dark:text-gray-400 text-lg"
+          >
             <li class="flex items-center space-x-3 rtl:space-x-reverse">
               <svg
                 class="flex-shrink-0 w-5 h-5 text-green-500 dark:text-green-400"
@@ -190,7 +198,8 @@
                 />
               </svg>
               <span>
-                <strong>Discovery Call:</strong> We begin with a conversation to understand your goals, themes, and vision.
+                <strong>Discovery Call:</strong> We begin with a conversation to
+                understand your goals, themes, and vision.
               </span>
             </li>
             <li class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -210,7 +219,8 @@
                 />
               </svg>
               <span>
-                <strong>Outline Creation:</strong> Our writers develop a detailed outline to ensure clarity and direction.
+                <strong>Outline Creation:</strong> Our writers develop a
+                detailed outline to ensure clarity and direction.
               </span>
             </li>
             <li class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -230,12 +240,13 @@
                 />
               </svg>
               <span class="font-semibold text-gray-900 dark:text-white">
-                <strong>Revisions:</strong> We believe in perfection. Our revision process ensures you're thrilled with the final product.
+                <strong>Revisions:</strong> We believe in perfection. Our
+                revision process ensures you're thrilled with the final product.
               </span>
             </li>
           </ul>
         </div>
-      
+
         <div class="w-full md:w-1/2 flex justify-center items-center">
           <img
             src="./images/iamge-1.jpeg"
